@@ -132,9 +132,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<jvmArguments>--add-modules java.xml.bind</jvmArguments>
-				</configuration>
+				<!-- <configuration>
+					<jvmArguments>add-modules java.xml.bind</jvmArguments>
+				</configuration> -->
 			</plugin>
 			<!-- <plugin> 
 				<groupId>org.apache.maven.plugins</groupId> 
